--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <module>campus-server</module>
     </modules>
     <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <mybatis.spring>2.2.0</mybatis.spring>
         <lombok>1.18.30</lombok>
         <fastjson>1.2.76</fastjson>
@@ -26,10 +28,11 @@
         <pagehelper>1.3.0</pagehelper>
         <aliyun.sdk.oss>3.10.2</aliyun.sdk.oss>
         <knife4j>3.0.2</knife4j>
-        <aspectj>1.9.4</aspectj>
-        <jjwt>0.9.1</jjwt>
+        <aspectj>1.9.7</aspectj>
         <jaxb-api>2.3.1</jaxb-api>
         <poi>3.16</poi>
+        <jjwt>0.9.1</jjwt>
+
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -38,7 +41,17 @@
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis.spring}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>2.7.3</version>
+            </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>2.7.3</version>
+            </dependency>
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -67,6 +80,12 @@
                 <groupId>com.github.pagehelper</groupId>
                 <artifactId>pagehelper-spring-boot-starter</artifactId>
                 <version>${pagehelper}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.campus</groupId>
+                <artifactId>campus-delivery</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
 
             <dependency>
