--- a/campus-server/pom.xml
+++ b/campus-server/pom.xml
@@ -23,6 +23,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--AJ-Captcha-->
+        <dependency>
+            <groupId>com.anji-plus</groupId>
+            <artifactId>captcha-spring-boot-starter</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
