1. 高并发秒杀架构 (Redis + Lua + MQ) - 原子性库存扣减：引入 seckill.lua脚本，在Redis层通过原子操作实现资格校验与库存预扣，解决超卖与并发安全问题。 - 异步削峰填谷：集成 RabbitMQ，将秒杀请求转为异步消息 (coupon.seckill.queue)，通过 CouponSeckillListener 消费者端实现 MySQL 的最终一致性落库，保护数据库峰值压力。
 2. 全文检索引擎 (Elasticsearch)
- 搜索引擎集成：接入 Elasticsearch 7.17，实现 MySQL 与 ES 的双写一致性（增量同步）。
- 复合查询策略：基于 @Query 实现 multi_match 多字段匹配算法，支持对“菜品名称”与“描述”的加权综合检索，配合 ik_max_word 中文分词优化搜索体验。

 核心业务逻辑
 1. 订单域安全与状态机
- 后端价格熔断：重构 submitOrder 链路，摒弃前端传值，实现后端基于购物车与优惠券策略的强制重算机制，防止金额篡改风险。
- 逆向流程闭环：完善订单状态机，在“取消订单/超时未支付”场景下，原子化回退优惠券状态。

 2. 营销域计算策略
- 贪心策略试算：实现订单试算接口，基于贪心算法遍历用户可用券池，自动匹配最优减免方案并计算最终实付金额。

新增功能特性
- 新增 C 端菜品与套餐的全局搜索接口，支持停售商品自动过滤。
- 新增优惠券过期状态清理定时任务 (CouponTask)。

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
                 <artifactId>spring-boot-starter-security</artifactId>
                 <version>2.7.3</version>
             </dependency>
+
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -63,6 +64,18 @@
                 <groupId>com.anji-plus</groupId>
                 <artifactId>captcha-spring-boot-starter</artifactId>
                 <version>1.4.0</version>
+            </dependency>
+            <!--RabbitMQ-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-amqp</artifactId>
+                <version>2.7.3</version>
+            </dependency>
+            <!--ES-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+                <version>2.7.3</version>
             </dependency>
 
             <dependency>
