--- a/campus-pojo/pom.xml
+++ b/campus-pojo/pom.xml
@@ -23,5 +23,11 @@
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+            <version>2.7.3</version>
+        </dependency>
     </dependencies>
 </project>
