缓存穿透防御: - 集成 Redisson 布隆过滤器，对 菜品/套餐/优惠券 三大核心业务实现 ID 拦截。 - 实现系统启动预热，自动加载 MySQL 历史数据至过滤器。 - 完善数据同步链路，新增数据自动加入过滤器，确保新数据可访问

--- a/campus-server/pom.xml
+++ b/campus-server/pom.xml
@@ -64,6 +64,11 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+        <!--Redisson-->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
@@ -102,7 +107,7 @@
 
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
-            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
@@ -115,14 +120,14 @@
             <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
             <version>2.7.3</version>
         </dependency>
-        <!-- 补充：ES核心包（和容器版本一致） -->
+        <!-- ES核心包 -->
         <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>7.17.7</version>
         </dependency>
 
-        <!-- 补充：ES REST客户端（操作ES的核心） -->
+        <!-- ES REST客户端 -->
         <dependency>
             <groupId>org.elasticsearch.client</groupId>
             <artifactId>elasticsearch-rest-high-level-client</artifactId>
@@ -137,6 +142,19 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <!-- JSR-303 校验核心依赖,提供 javax.validation.constraints包 -->
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
+        </dependency>
+
+        <!-- 校验框架实现 -->
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>6.2.5.Final</version>
         </dependency>
 
         <dependency>
