--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,6 @@
         <druid>1.2.1</druid>
         <pagehelper>1.3.0</pagehelper>
         <aliyun.sdk.oss>3.10.2</aliyun.sdk.oss>
-        <knife4j>3.0.2</knife4j>
         <aspectj>1.9.7</aspectj>
         <jaxb-api>2.3.1</jaxb-api>
         <poi>3.16</poi>
@@ -44,7 +43,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-redis</artifactId>
-                <version>2.7.3</version>
+                <version>2.7.8</version>
             </dependency>
 
             <dependency>
@@ -77,7 +76,12 @@
                 <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
                 <version>2.7.3</version>
             </dependency>
-
+            <!--Redisson-->
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>3.18.0</version>
+            </dependency>
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
@@ -95,6 +99,19 @@
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid}</version>
             </dependency>
+            <!-- JSR-303 校验核心依赖,提供 javax.validation.constraints包 -->
+            <dependency>
+                <groupId>jakarta.validation</groupId>
+                <artifactId>jakarta.validation-api</artifactId>
+                <version>2.0.2</version>
+            </dependency>
+
+            <!-- 校验框架实现 -->
+            <dependency>
+                <groupId>org.hibernate.validator</groupId>
+                <artifactId>hibernate-validator</artifactId>
+                <version>6.2.5.Final</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.github.pagehelper</groupId>
@@ -108,10 +125,15 @@
                 <version>1.0-SNAPSHOT</version>
             </dependency>
 
-            <dependency>
+            <!--<dependency>
                 <groupId>com.github.xiaoymin</groupId>
                 <artifactId>knife4j-spring-boot-starter</artifactId>
                 <version>${knife4j}</version>
+            </dependency>-->
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-openapi2-spring-boot-starter</artifactId>
+                <version>4.4.0</version>
             </dependency>
 
             <dependency>
